modified files added

--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
         body{
             display: block;
             text-align: center;
-            background-image: linear-gradient(to right, #d7d2cc 0%, #304352 100%);
+            background-image: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
         }
         .dice-roller{
-            height: 300px;
-            width: 300px;
+            height: 350px;
+            
+        }
+        .heading{
+            margin: 50px auto;
+            font-size: 40px;
         }
         .btn-dice{
            display: block;
